SERVER-25680 Don't check for view if collection exists